# llmweb-rs

./: CLAUDE.md  Cargo.toml  README.md
examples/: codegen.rs  google.rs  hn.rs  hn_custom.rs  inline_html.rs  recipe.rs  v2ex.rs  v2ex_stream.rs
schemas/: hn_schema.json  v2ex_schema.json
src/: browser.rs  codegen.rs  error.rs  lib.rs  main.rs  models.rs  preprocess.rs  recipe.rs  streaming.rs
