[package]
name = "llmweb"
version = "0.1.7"
edition = "2024"
description = "Webpage to structured data in Rust & LLM"
license = "MIT"
repository = "https://github.com/zTgx/llmweb"
readme = "README.md"
keywords = ["llm", "web", "scraper"]

[[bin]]
name = "llmweb"
path = "src/main.rs"

[dependencies]
genai = "0.3.5"
headless_chrome = "1.0.17"
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
thiserror = "2"
clap = { version = "4.0", features = ["derive"] }
htmd = "0.5"
scraper = "0.27"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"