[package]
name = "llmweb"
version = "0.2.0"
edition = "2024"
description = "Extract any webpage to structured data with headless Chrome + LLM"
license = "MIT"
repository = "https://github.com/zTgx/llmweb"
homepage = "https://github.com/zTgx/llmweb"
documentation = "https://docs.rs/llmweb"
readme = "README.md"
keywords = ["llm", "web", "scraper", "extraction", "openai"]
categories = ["web-programming", "parsing", "command-line-utilities"]

[[bin]]
name = "llmweb"
path = "src/main.rs"

[dependencies]
async-openai = { version = "0.40", features = ["chat-completion"] }
headless_chrome = "1.0.17"
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.0"
thiserror = "2"
clap = { version = "4.0", features = ["derive"] }
htmd = "0.5"
scraper = "0.27"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }